--- a/basic/package.json
+++ b/basic/package.json
@@ -22,22 +22,20 @@
   },
   "homepage": "https://github.com/Spurty007/demo#readme",
   "dependencies": {
+    "webdriverio": "^5.4.17",
+    "wdio-chromedriver-service": "^5.0.1",
+    "wdio-webdriver-service": "^0.1.6",
     "@wdio/cli": "^5.4.17",
     "@wdio/dot-reporter": "^5.4.15",
     "@wdio/jasmine-framework": "^5.4.14",
     "@wdio/junit-reporter": "^5.4.15",
     "@wdio/local-runner": "^5.4.17",
+    "@wdio/logger": "^5.6.0",
     "@wdio/spec-reporter": "^5.4.15",
     "assert": "^1.4.1",
     "chromedriver": "^2.46.0",
     "events": "^3.0.0",
-    "firefox": "0.0.1",
-    "gecko": "0.0.0",
-    "jasmine": "^3.3.1",
-    "png-crop": "0.0.2",
-    "selenium-webdriver": "^4.0.0-alpha.1",
-    "update": "^0.7.4",
-    "wdio-chromedriver-service": "^5.0.0",
-    "webdriverio": "^5.4.17"
+    "geckodriver": "^1.15.1",
+    "jasmine": "^3.3.1"
   }
 }
