--- a/basic/package.json
+++ b/basic/package.json
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "Selenium",
-    "work"
+    "work",
+    "Note: @wdio/sync requires npm install --global --production windows-build-tools"
   ],
   "author": "Adrian Lewis",
   "email": "adelewis@gmail.com",
@@ -22,18 +23,23 @@
   },
   "homepage": "https://github.com/Spurty007/demo#readme",
   "dependencies": {
-    "chai": "^4.2.0",
     "protractor": "^5.4.2",
     "url": "^0.11.0"
   },
   "devDependencies": {
     "@wdio/cli": "^5.6.2",
+    "@wdio/config": "^5.6.0",
     "@wdio/dot-reporter": "^5.6.0",
+    "@wdio/firefox-profile-service": "^5.6.0",
     "@wdio/jasmine-framework": "^5.6.0",
     "@wdio/junit-reporter": "^5.6.0",
     "@wdio/local-runner": "^5.6.2",
     "@wdio/logger": "^5.6.0",
+    "@wdio/repl": "^5.6.0",
+    "@wdio/reporter": "^5.6.0",
     "@wdio/spec-reporter": "^5.6.0",
+    "@wdio/sync": "^5.6.0",
+    "@wdio/utils": "^5.6.0",
     "assert": "^1.4.1",
     "chromedriver": "^2.46.0",
     "events": "^3.0.0",
